--- a/css/2-Flexbox-News-Gallery/index.html
+++ b/css/2-Flexbox-News-Gallery/index.html
@@ -19,7 +19,7 @@
     <main>
       <h1 class="mainhead">Latest News</h1>
       <section>
-        <article>
+        <article class="first">
           <h1>Lorem ipsum dolor sit amet, consectetur adipisicing.</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. In
